## setup.cfg
## https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
## PEP-517
## PEP-518

[metadata]
name = gatekeeper-bot
version = 0.0.1
description = Gatekeeper Telegram Bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avalak-work/gatekeeper-bot
keywords = python, telegram, bot
license = MIT
platforms = any

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    typing; python_version < "3.5"
    dataclasses; python_version == "3.6"
    cached-property
    apscheduler==3.6.3
    pymongo[srv]
    python-telegram-bot
    requests[socks]

[options.packages.find]
where=src

[options.extras_require]
tests =
    mock; python_version<="3.3"
    pytest
    pytest-runner
    flake8
    autopep8
    pylint
    coverage


[flake8]
max-complexity = 10
exclude = .git,__pycache__,.eggs,.tox,.pip,build,dist,venv
ignore = D203,F401,W292,E266,E501
